--- a/demo/bindDemo.html
+++ b/demo/bindDemo.html
@@ -7,21 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>最简单的数据绑定</title>
     <style>
-		input{
-			border: 1px solid #333;
-		}
-	</style>
+        input {
+            border: 1px solid #333;
+        }
+    </style>
 </head>
 
 <body>
     <div id="app" style="text-align:center;">
-        <input id="input" type="text" v-model="name"><br> 姓名：
+        <input id="input" type="text" v-model="name">
+        <br> 姓名：
         <span id="text">{{name}}</span>
     </div>
 
     <script>
         const Vue = function (options) {
-            let {node, data} = options,
+            let { node, data } = options,
                 name = data.name,
 
                 // 编译正则匹配取到 对象两个node节点
@@ -35,7 +36,7 @@
                     input.value = newVal
                     text.innerHTML = newVal
                 },
-                get(){
+                get() {
                     return name
                 }
             })
